--- a/tests/images/mysql/mysync.yaml
+++ b/tests/images/mysql/mysync.yaml
@@ -68,4 +68,5 @@ manager_election_delay_after_quorum_loss: ${MANAGER_ELECTION_DELAY_AFTER_QUORUM_
 manager_lock_acquire_delay_after_quorum_loss: ${MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:-30s}
 optimize_replication_before_switchover: ${OPTIMIZE_REPLICATION_BEFORE_SWITCHOVER:-true}
 optimize_replication_lag_threshold: 60s
+optimize_replication_lag_threshold_async: ${OPTIMIZE_REPLICATION_BEFORE_SWITCHOVER:-120s}
 optimize_replication_convergence_timeout: 300s
