Recude memory usage by fixing alignment of fields in structs

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -44,6 +44,9 @@ linters-settings:
       - name: empty-block
       - name: unreachable-code
       - name: redefines-builtin-id
+  govet:
+    enable:
+      - fieldalignment
 
 linters:
   disable-all: true
