mysql-8.4 new feature files for 8.4 tests

--- a/.github/workflows/docker-tests-8.4.yml
+++ b/.github/workflows/docker-tests-8.4.yml
@@ -43,7 +43,7 @@ jobs:
           - 'VERSION=8.4 GODOG_FEATURE=active_nodes.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=async.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=async_setting.feature make test'
-          - 'VERSION=8.4 GODOG_FEATURE=cascade_replicas.feature make test'
+          - 'VERSION=8.4 GODOG_FEATURE=cascade_replicas.feature.84 make test'
           - 'VERSION=8.4 GODOG_FEATURE=CLI.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=crash_recovery.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=events_reenable.feature make test'
@@ -52,8 +52,8 @@ jobs:
           - 'VERSION=8.4 GODOG_FEATURE=free_space.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=host_discovery.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=host_management.feature make test'
-          - 'VERSION=8.4 GODOG_FEATURE=maintenance.feature make test'
-          - 'VERSION=8.4 GODOG_FEATURE=offline_mode.feature make test'
+          - 'VERSION=8.4 GODOG_FEATURE=maintenance.feature.84 make test'
+          - 'VERSION=8.4 GODOG_FEATURE=offline_mode.feature.84 make test'
           - 'VERSION=8.4 GODOG_FEATURE=priority.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=readonly_filesystem.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=recovery.feature make test'
