more slaves & REPLICA_SIDE_DISABLED fixes

--- a/.github/workflows/docker-tests-8.4.yml
+++ b/.github/workflows/docker-tests-8.4.yml
@@ -48,7 +48,7 @@ jobs:
           - 'VERSION=8.4 GODOG_FEATURE=crash_recovery.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=events_reenable.84.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=external_replication.feature make test'
-          - 'VERSION=8.4 GODOG_FEATURE=failover.feature make test'
+          - 'VERSION=8.4 GODOG_FEATURE=failover.84.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=free_space.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=host_discovery.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=host_management.feature make test'
@@ -60,7 +60,7 @@ jobs:
           - 'VERSION=8.4 GODOG_FEATURE=repair.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=repl_mon.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=statefile.feature make test'
-          - 'VERSION=8.4 GODOG_FEATURE=switchover_from.feature make test'
+          - 'VERSION=8.4 GODOG_FEATURE=switchover_from.84.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=switchover_to.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=zk_failure.feature make test'
           - 'VERSION=8.4 GODOG_FEATURE=zk_maintenance.feature make test'
