--- a/tests/images/docker-compose.yaml
+++ b/tests/images/docker-compose.yaml
@@ -100,6 +100,7 @@ services:
       MANAGER_SWITCHOVER: 
       MANAGER_ELECTION_DELAY_AFTER_QUORUM_LOSS:
       MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:
+      OFFLINE_MODE_ENABLE_LAG:
     healthcheck:
       test: "mysql --user=admin --password=admin_pwd -e 'SELECT 1'"
       start_period: 30s
@@ -149,6 +150,7 @@ services:
       MANAGER_SWITCHOVER:
       MANAGER_ELECTION_DELAY_AFTER_QUORUM_LOSS:
       MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:
+      OFFLINE_MODE_ENABLE_LAG:
     depends_on:
       mysql1:
         condition: service_healthy
@@ -192,6 +194,7 @@ services:
       MANAGER_SWITCHOVER:
       MANAGER_ELECTION_DELAY_AFTER_QUORUM_LOSS:
       MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:
+      OFFLINE_MODE_ENABLE_LAG:
     depends_on:
       mysql1:
         condition: service_healthy
