--- a/.github/workflows/docker-tests-8.0.yml
+++ b/.github/workflows/docker-tests-8.0.yml
@@ -11,9 +11,16 @@ env:
   DOCKER_API_VERSION: 1.43
 
 jobs:
+  lint:
+    uses: .github/workflows/golangci-lint.yml
+
+  all_unittests:
+    uses: .github/workflows/unit-tests.yml
+
   buildimages:
     name: Build images
     runs-on: ubuntu-22.04
+    needs: [ lint all_unittests ]
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v5
