--- a/.github/workflows/docker-tests-8.4.yml
+++ b/.github/workflows/docker-tests-8.4.yml
@@ -12,15 +12,15 @@ env:
 
 jobs:
   lint:
-    uses: .github/workflows/golangci-lint.yml
+    uses: ./.github/workflows/golangci-lint.yml
 
   all_unittests:
-    uses: .github/workflows/unit-tests.yml
+    uses: ./.github/workflows/unit-tests.yml
 
   buildimages:
     name: Build images
     runs-on: ubuntu-22.04
-    needs: [ lint all_unittests ]
+    needs: [ lint, all_unittests ]
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v5
