--- a/.github/workflows/docker-tests-8.0.yml
+++ b/.github/workflows/docker-tests-8.0.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ master ]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref }}
+  cancel-in-progress: true
+
 env:
   GO_VERSION: 1.25.0
   DOCKER_API_VERSION: 1.43
