--- a/.github/workflows/docker-tests-8.0.yml
+++ b/.github/workflows/docker-tests-8.0.yml
@@ -27,7 +27,7 @@ jobs:
   buildimages:
     name: Build images
     runs-on: ubuntu-22.04
-    needs: [ lint, all_unittests ]
+    needs: [ lint, all_unittests, codeql ]
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v5
